--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "media_belajar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "node index.js"
+    "start": "node index.ts"
   },
   "author": "",
   "license": "ISC",
