--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2"
   },
   "dependencies": {
-    "connect-history-api-fallback": "^2.0.0"
+    "connect-history-api-fallback": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
